# ETL_C-

./: .gitignore  CMakeLists.txt  README.md
DataInput/: data.json  nuevo.json
config/: config.json
data/: data.json  datos.json  datos2.json
include/: common_types.hpp  extraction.hpp  manager_db.hpp  repository.hpp  transformation.hpp  utility.hpp  utils.hpp
include/common/: Utility.hpp
include/database/: Connection.hpp  InsertValues.hpp  QueryExecutor.hpp  SchemaManager.hpp
include/etl/: Extraction.hpp  Transformation.hpp
include/services/: ConfigLoader.hpp
src/: extraction.cpp  main.cpp  manager_db.cpp  repository.cpp  transformation.cpp  utility.cpp  utils.cpp
src/common/: Utility.cpp
src/database/: Connection.cpp  InsertValues.cpp  QueryExecutor.cpp  SchemaManager.cpp
src/etl/: Extraction.cpp  Transformation.cpp
src/services/: ConfigLoader.cpp
